tests/transpiler/x/zig/group_by_conditional_sum.error
run: exit status 1
/workspace/mochi/tests/transpiler/x/zig/group_by_conditional_sum.zig:16:19: error: unable to infer array size
